automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -458,11 +458,11 @@
       "application/vnd.plotly.v1+json": {
        "data": [
         {
-         "mode": "lines+markers",
+         "mode": "lines",
          "name": "data",
          "text": [],
          "type": "scatter",
-         "uid": "7a33629c-c0e4-11e8-8973-0242ac11002f",
+         "uid": "7b658110-c0e7-11e8-8973-0242ac11002f",
          "x": [
           0,
           1,
@@ -484,10 +484,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"9860b3f3-4a05-43c2-8691-530a364e675b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"9860b3f3-4a05-43c2-8691-530a364e675b\", [{\"mode\": \"lines+markers\", \"name\": \"data\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5], \"y\": [15, 19, 23, 27, 31, 35], \"type\": \"scatter\", \"uid\": \"7a384712-c0e4-11e8-8973-0242ac11002f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"0f929e6a-290e-44b1-96e9-5e9b25639255\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"0f929e6a-290e-44b1-96e9-5e9b25639255\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5], \"y\": [15, 19, 23, 27, 31, 35], \"type\": \"scatter\", \"uid\": \"7b6bc9ee-c0e7-11e8-8973-0242ac11002f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"9860b3f3-4a05-43c2-8691-530a364e675b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"9860b3f3-4a05-43c2-8691-530a364e675b\", [{\"mode\": \"lines+markers\", \"name\": \"data\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5], \"y\": [15, 19, 23, 27, 31, 35], \"type\": \"scatter\", \"uid\": \"7a384712-c0e4-11e8-8973-0242ac11002f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"0f929e6a-290e-44b1-96e9-5e9b25639255\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"0f929e6a-290e-44b1-96e9-5e9b25639255\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5], \"y\": [15, 19, 23, 27, 31, 35], \"type\": \"scatter\", \"uid\": \"7b6bc9ee-c0e7-11e8-8973-0242ac11002f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -506,7 +506,7 @@
     "\n",
     "\n",
     "four_x_plus_fifteen_values = list(map(lambda x: output_at(four_x_plus_fifteen, x),x_values))\n",
-    "four_x_plus_fifteen_trace = trace_values(x_values, four_x_plus_fifteen_values, mode = 'lines+markers')\n",
+    "four_x_plus_fifteen_trace = trace_values(x_values, four_x_plus_fifteen_values, mode = 'lines')\n",
     "plot([four_x_plus_fifteen_trace])"
    ]
   },
