--- a/index.ipynb
+++ b/index.ipynb
@@ -550,7 +550,7 @@
    "outputs": [],
    "source": [
     "def delta_f(list_of_terms, x_value, delta_x):\n",
-    "    map()\n",
+    "    map(lambda term:,list_of_terms)\n",
     "    "
    ]
   },
