--- a/index.ipynb
+++ b/index.ipynb
@@ -741,7 +741,8 @@
    "outputs": [],
    "source": [
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
-    "    pass"
+    "    def delta_f(list_of_terms, x_value, delta_x):\n",
+    "    return (output_at(list_of_terms, x_value+delta_x)-output_at(list_of_terms, x_value))/delta_x"
    ]
   },
   {
