--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -742,7 +742,7 @@
    "source": [
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
     "    def delta_f(list_of_terms, x_value, delta_x):\n",
-    "    return"
+    "    return (output_at(list_of_terms, x_value+delta_x)-output_at(list_of_terms, x_value))/delta_x"
    ]
   },
   {
